kubernetes/flask-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskapi-service
  labels:
    io.kompose.service: flask-api
  name: flask-api
spec:
  type: NodePort
  selector:
    app: flask-api
  ports:
    - port: 6000
      targetPort: 6000
      nodePort: 30000
status:
  loadBalancer: {}
