kubernetes/flask-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskdb-service
  labels:
    io.kompose.service: flask-db
  name: flask-db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    app: flask-db
status:
  loadBalancer: {}
